--- a/client/src/assets/css/letter.css
+++ b/client/src/assets/css/letter.css
@@ -116,7 +116,7 @@
 }
 
 .letter-page .content:after {
-  content: "Page# :";
+  content: "Tanggal Mengirim :";
   position: absolute;
   width: 100px;
   height: 30px;
